[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "keys",
    "programs/*",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/buffalojoec/mollusk"
readme = "README.md"
license = "MIT"
edition = "2021"
version = "0.0.15"

[workspace.dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = "4.5.4"
criterion = "0.5.1"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.6.0"
mollusk-svm = { path = "harness", version = "0.0.15" }
mollusk-svm-bencher = { path = "bencher", version = "0.0.15" }
mollusk-svm-cli = { path = "cli", version = "0.0.15" }
mollusk-svm-error = { path = "error", version = "0.0.15" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.0.15" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.0.15" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.0.15" }
mollusk-svm-keys = { path = "keys", version = "0.0.15" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.0.15" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.0.15" }
num-format = "0.4.4"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
serial_test = "2.0"
solana-compute-budget = { path = "../agave/compute-budget" }
solana-log-collector = { path = "../agave/log-collector" }
solana-logger = { path = "../agave/sdk/logger" }
solana-program = { path = "../agave/sdk/program" }
solana-bpf-loader-program = { path = "../agave/programs/bpf_loader" }
solana-program-runtime = { path = "../agave/program-runtime" }
solana-stake-program = { path = "../agave/programs/stake" }
solana-system-program = { path = "../agave/programs/system" }
solana-vote-program = { path = "../agave/programs/vote" }
solana-sdk = { path = "../agave/sdk" }
solana-timings = { path = "../agave/timings" }
thiserror = "1.0.64"
tokio = "1.37.0"
which = "=4.4.0"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
]
[patch.crates-io]
solana-clock = { path = "../agave/sdk/clock" }
solana-curve25519 = { path = "../agave/curves/curve25519" }
solana-account-info = { path = "../agave/sdk/account-info" }
solana-borsh = { path = "../agave/sdk/borsh" }
solana-cpi = { path = "../agave/sdk/cpi" }
solana-decode-error = { path = "../agave/sdk/decode-error" }
solana-frozen-abi = { path = "../agave/sdk/frozen-abi", features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { path = "../agave/sdk/frozen-abi/macro", features = [
    "frozen-abi",
] }
solana-hash = { path = "../agave/sdk/hash" }
solana-instruction = { path = "../agave/sdk/instruction", features = ["std"] }
solana-msg = { path = "../agave/sdk/msg" }
solana-program = { path = "../agave/sdk/program" }
solana-program-entrypoint = { path = "../agave/sdk/program-entrypoint" }
solana-program-error = { path = "../agave/sdk/program-error" }
solana-program-option = { path = "../agave/sdk/program-option" }
solana-program-pack = { path = "../agave/sdk/program-pack" }
solana-pubkey = { path = "../agave/sdk/pubkey" }
solana-sha256-hasher = { path = "../agave/sdk/sha256-hasher" }
solana-sysvar-id = { path = "../agave/sdk/sysvar-id" }
solana-zk-sdk = { path = "../agave/zk-sdk" }
